# zindi

./: .gitignore  Experiments.csv  Train_nllb_hf.ipynb  fix_ct2.txt  init_script.sh  init_script.txt  init_script1.sh  init_script2.sh  marian_init.sh  metrics  pyproject.toml  test.ipynb
common/: CT_Conversion.ipynb  Eval.ipynb  Finetuning.ipynb  Marian_Train.ipynb  Train.ipynb  Train_nllb.ipynb  build_model.ipynb  build_tokenizer.ipynb  combined.vocab  combined_vocab.json  combined_vocab.txt  config.yaml  deployment.ipynb  dyu.model  dyu.vocab  dyula_8000.model  dyula_8000.vocab  fr.model  fr.vocab  initialize.ipynb  input.json  transformers_bak.py
common/dyula_french_tokenizer/: source.spm  target.spm  tokenizer_config.json
data/: unmapped_dyu_tokens.txt  unmapped_fr_tokens.txt  unmapped_tokens.txt
deployment/: Dockerfile  docker-compose.yml  image_name.txt  input.json  main.py  requirements.txt
submission/: image_name.txt
submission/deployment/: main.py  requirements.txt
tokenizer_custom/: custom_tokenizer.ipynb
tokenizer_custom/combined/: added_tokens.json  target.spm  tokenizer_config.json  vocab.json
tokenizer_custom/combined_pad/: combined_formatted_pad.vocab  combined_with_pad.vocab
tokenizer_custom/combined_pad_V1/: tokenizer_config.json  vocab.json
tokenizer_custom/combined_pad_V2/: target.spm  tokenizer_config.json  vocab.json
tokenizer_custom/marian/: tokenizer_config.json
tokenizer_custom/marian_v2/: added_tokens.json  dictionary.txt  source.spm  target.spm  tokenizer_config.json  vocab.json
tokenizer_custom/ver1/: dyu.model  fr.model  (+4 more)
(+1 files in other folders)
