[tool.poetry]
name = "zindi"
version = "0.1.0"
description = ""
authors = ["Rana Banerjee <rana1224@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.10"
datasets = "^2.20.0"
evaluate = "^0.4.2"
torch = "^2.4.0"
accelerate = "^0.33.0"
sentencepiece = "^0.2.0"
sacrebleu = "^2.4.2"
ctranslate2 = "^4.3.1"
sacremoses = "^0.1.1"
pyyaml = "^6.0.2"
kserve = "^0.13.1"
iso639 = "^0.1.4"
vastai = "^0.2.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
